Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4178

Memory leak in SplitDNSConfig when shutting down

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 6.1.0
    • 6.2.0
    • DNS
    • None

    Description

      =================================================================
      ==7628==ERROR: LeakSanitizer: detected memory leaks
      
      Direct leak of 8 byte(s) in 1 object(s) allocated from:
          #0 0x7f27d1b01872 in operator new(unsigned long) (/lib64/libasan.so.2+0x99872)
          #1 0xa1a1c3 in SplitDNSConfig::startup() /home/bcall/dev/apache/trafficserver/iocore/dns/SplitDNS.cc:133
          #2 0x494e59 in main /home/bcall/dev/apache/trafficserver/proxy/Main.cc:1767
          #3 0x7f27cea3e57f in __libc_start_main (/lib64/libc.so.6+0x2057f)
      
      Indirect leak of 80 byte(s) in 1 object(s) allocated from:
          #0 0x7f4dee606e72 in memalign (/lib64/libasan.so.2+0x98e72)
          #1 0x7f4dee337d91 in ats_memalign /home/bcall/dev/apache/trafficserver/lib/ts/ink_memory.cc:112
          #2 0x7f4dee338cb2 in ink_freelist_new /home/bcall/dev/apache/trafficserver/lib/ts/ink_queue.cc:181
          #3 0xa1a1e0 in ClassAllocator<ProxyMutex>::alloc() ../../lib/ts/Allocator.h:122
          #4 0xa1a1e0 in new_ProxyMutex() ../../iocore/eventsystem/I_Lock.h:555
          #5 0xa1a1e0 in SplitDNSConfig::startup() ../../mgmt/ProxyConfig.h:121
          #6 0x494e59 in main /home/bcall/dev/apache/trafficserver/proxy/Main.cc:1767
          #7 0x7f4deb54457f in __libc_start_main (/lib64/libc.so.6+0x2057f)
      

      Attachments

        Activity

          People

            bcall Bryan Call
            bcall Bryan Call
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: