TS-4178: Memory leak in SplitDNSConfig