iocore/dns/I_SplitDNSProcessor.h
@@ -52,6 +52,12 @@ struct SplitDNSConfig {
   static Ptr<ProxyMutex> dnsHandler_mutex;
 
   static int gsplit_dns_enabled;
+  static ConfigUpdateHandler<SplitDNSConfig> *splitDNSUpdate;
+  ~SplitDNSConfig()
+  {
+    delete splitDNSUpdate;
+    dnsHandler_mutex = NULL;
+  }
 };
 
 #endif
